# test-koek

./: .gitignore  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  config.ini  docker-compose.yml  first_script.py  mkdocs.yml  pyproject.toml  this_was_dock_file  this_was_dock_file_old
docs/: index.md  modules.md
test_koek/: foo.py  utils.py
test_koek/notebooks/: test Notebook.ipynb
tests/: test_foo.py
